src/objects/caesars_offers_redeemed__x.object
<CustomObject>
    <description>caesars$offers_redeemed</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$offers_redeemed</externalName>
    <fields>
        <fullName>c_collateral_id__c</fullName>
        <description>c_collateral_id</description>
        <externalDeveloperName>c_collateral_id</externalDeveloperName>
        <label>c_collateral_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_coupon_id__c</fullName>
        <description>c_coupon_id</description>
        <externalDeveloperName>c_coupon_id</externalDeveloperName>
        <label>c_coupon_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_coupon_type__c</fullName>
        <description>c_coupon_type</description>
        <externalDeveloperName>c_coupon_type</externalDeveloperName>
        <label>c_coupon_type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_logon__c</fullName>
        <description>c_logon</description>
        <externalDeveloperName>c_logon</externalDeveloperName>
        <label>c_logon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_offer_id__c</fullName>
        <description>c_offer_id</description>
        <externalDeveloperName>c_offer_id</externalDeveloperName>
        <label>c_offer_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_offer_status__c</fullName>
        <description>c_offer_status</description>
        <externalDeveloperName>c_offer_status</externalDeveloperName>
        <label>c_offer_status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_purge_flag__c</fullName>
        <description>c_purge_flag</description>
        <externalDeveloperName>c_purge_flag</externalDeveloperName>
        <label>c_purge_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rdm_channel__c</fullName>
        <description>c_rdm_channel</description>
        <externalDeveloperName>c_rdm_channel</externalDeveloperName>
        <label>c_rdm_channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rdm_source__c</fullName>
        <description>c_rdm_source</description>
        <externalDeveloperName>c_rdm_source</externalDeveloperName>
        <label>c_rdm_source</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_valid_prop_cd__c</fullName>
        <description>c_valid_prop_cd</description>
        <externalDeveloperName>c_valid_prop_cd</externalDeveloperName>
        <label>c_valid_prop_cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_offer_status_dt__c</fullName>
        <description>d_offer_status_dt</description>
        <externalDeveloperName>d_offer_status_dt</externalDeveloperName>
        <label>d_offer_status_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pdb_timestamp__c</fullName>
        <description>d_pdb_timestamp</description>
        <externalDeveloperName>d_pdb_timestamp</externalDeveloperName>
        <label>d_pdb_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_purge_date__c</fullName>
        <description>d_purge_date</description>
        <externalDeveloperName>d_purge_date</externalDeveloperName>
        <label>d_purge_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rpt_period__c</fullName>
        <description>d_rpt_period</description>
        <externalDeveloperName>d_rpt_period</externalDeveloperName>
        <label>d_rpt_period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_rdm_amount__c</fullName>
        <description>f_rdm_amount</description>
        <externalDeveloperName>f_rdm_amount</externalDeveloperName>
        <label>f_rdm_amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_coupon_counter__c</fullName>
        <description>i_coupon_counter</description>
        <externalDeveloperName>i_coupon_counter</externalDeveloperName>
        <label>i_coupon_counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_coupon_key__c</fullName>
        <description>i_coupon_key</description>
        <externalDeveloperName>i_coupon_key</externalDeveloperName>
        <label>i_coupon_key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_gst_offer_nbr__c</fullName>
        <description>i_gst_offer_nbr</description>
        <externalDeveloperName>i_gst_offer_nbr</externalDeveloperName>
        <label>i_gst_offer_nbr</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_pdb_trip_id__c</fullName>
        <description>i_pdb_trip_id</description>
        <externalDeveloperName>i_pdb_trip_id</externalDeveloperName>
        <label>i_pdb_trip_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$offers_redeemed</label>
    <pluralLabel>caesars$offers_redeemed</pluralLabel>
</CustomObject>